# LED-Segments

./: .gitignore  CMakeLists.txt  CMakeListsUser.txt  README.md  keywords.txt  library.json  library.properties  platformio.ini
.clion/: platformio_settings.xml
examples/BasicUsage/: BasicUsage.ino  CMakeLists.txt  README.md  platformio.ini
examples/BasicUsage/customeffect/: CustomEffect.h
examples/BasicUsage/spec/: MatrixDisplaySpec.cpp  MatrixDisplaySpec.h
examples/BasicUsage/spec/config/: EffectConfig.h  LayoutConfig.h  OverlayConfig.h  ParamConfig.h  TransitionConfig.h
examples/BasicUsage/specs/fibonacci/: FibonacciSpec.h
examples/BasicUsage/specs/fibonacci/config/: FibonacciEffectConfig.h  FibonacciLayoutConfig.h  FibonacciOverlayConfig.h  FibonacciParamConfig.h  FibonacciTransitionConfig.h
examples/BasicUsage/specs/hat/: HatSpec.cpp
examples/BasicUsage/specs/hat/config/: HatEffectConfig.h  HatLayoutConfig.h  HatOverlayConfig.h  HatParamConfig.h
examples/BasicUsage/specs/hat/overlays/: EyeOverlay.cpp  EyeOverlay.h
examples/BasicUsage/specs/phrase/: PhraseSpec.cpp  PhraseSpec.h
examples/BasicUsage/specs/phrase/config/: PhraseEffectConfig.h  PhraseLayoutConfig.h  PhraseOverlayConfig.h  PhraseParamConfig.h  PhraseTransitionConfig.h
examples/BasicUsage/specs/umbrella/: UmbrellaSpec.cpp
examples/BasicUsage/specs/umbrella/config/: UmbrellaEffectConfig.h  UmbrellaLayoutConfig.h  UmbrellaOverlayConfig.h  UmbrellaParamConfig.h  UmbrellaTransitionConfig.h
examples/BasicUsage/src/: main.cpp
examples/BasicUsage/src/customeffect/: CustomEffect.cpp  CustomEffect.h
examples/BasicUsage/src/spec/: MatrixDisplaySpec.cpp  MatrixDisplaySpec.h
examples/BasicUsage/src/spec/config/: EffectConfig.h  LayoutConfig.h  OverlayConfig.h  ParamConfig.h  TransitionConfig.h
include/: unity_config.h
lib/structure/: Display.h  Layout.h  Pixel.cpp  Pixel.h  Segment.cpp  Segment.h
projectFilesBackup/: CMakeLists.txt  CMakeListsPrivate.txt
src/: LED-Segments.h  cluster.cpp  cluster.h  config.h  constants.h  display.cpp  display.h  effects.h  leds.cpp  leds.h  letters.h  main.cpp  palettes.h  section.h  sections.h  transformations.cpp  transformations.h  utils.cpp  utils.h
src/config/: effectconfig.cpp  effectconfig.h  effectcontext.h  variation.h
src/display/: display.cpp  display.h
src/displays/: DlhDisplay.h  FibonacciDisplay.h  TestDisplay.h
src/displayspec/: displayspec.h
src/effect/: effect.h  effectcontext.h  mirror.cpp
src/effects/: coloureffect.h  effect.h  effectcontext.h  effects.h  greeneffect.cpp  greeneffect.h  hueeffect.cpp  hueeffect.h  noiseeeffect.h  noiseeffect.cpp  partyeffect.cpp  partyeffect.h  pongeffect.cpp  (+7 more)
wiki/: DisplaySpec.md  Effects.md  Home.md  Overlays.md  Transitions.md
(+302 files in other folders)
